2010-11-05 Raphael Neider <rneider AT web.de>

	* sdas/as8051/Makefile.in,
	  sdas/asz80/Makefile.in,
	  sdas/as6808/Makefile.in,
	  sdas/asgb/Makefile.in: fix order of linking with -lm

2010-11-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peep.c:
	  Improvements relating to the use of hl as an alternative to iy.

2010-11-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.h,
	  src/z80/gen.c,
	  src/z80/ralloc.c,
	  src/z80/main.c,
	  src/z80/z80.h,
	  src/z80/peeph-z80.def:
	  Some steps towards implementing #3074318, and minor gbz80 fixes.

2010-11-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peep.c:
	  Fixed #3093447.

2010-11-03 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmain.c (setIncludePath): fixed uninitialized target

2010-11-03 Borut Razem <borut.razem AT siol.net>

	* device/include/pic14/sdcc-lib.h:
	  directories */pic renamed to */pic14

2010-11-02 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: added peepholes 248.n to 248.p
	  optimizing and/or/xor to xdata arrays

2010-11-02 Borut Razem <borut.razem AT siol.net>

	* device/include/Makefile.in, device/non-free/include/Makefile.in,
	  device/lib/Makefile.in, device/lib/pic14/configure,
	  device/lib/pic14/configure.in, device/lib/pic14/Makefile.common.in,
	  device/lib/pic16/aclocal.m4, device/lib/pic16/configure,
	  device/lib/pic16/configure.ac, device/non-free/lib/Makefile.in,
	  device/non-free/lib/pic14/configure,
	  device/non-free/lib/pic14/configure.in,
	  device/non-free/lib/pic14/libdev/Makefile.in,
	  device/non-free/lib/pic14/libdev/mkall.sh,
	  device/non-free/lib/pic14/Makefile.common.in,
	  device/non-free/lib/pic16/configure,
	  device/non-free/lib/pic16/configure.ac:
	  directories */pic renamed to */pic14

2010-11-01 Borut Razem <borut.razem AT siol.net>

	* Small Device C Compiler 3.0.0 released
	* .version, doc/sdccman.lyx: changed sdcc version to 3.0.1